--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bignumber.js": "^8.1.1",
+    "clipboard": "^2.0.4",
     "copy-to-clipboard": "^3.1.0",
     "element-ui": "^2.4.5",
     "less": "^3.9.0",
