--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "clipboard": "^2.0.4",
     "copy-to-clipboard": "^3.1.0",
     "element-ui": "^2.4.5",
+    "jsencrypt": "^3.0.0-rc.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "moment": "^2.24.0",
-    "nuls-sdk-js": "^2.2.3",
+    "node-jsencrypt": "^1.0.0",
+    "nuls-sdk-js": "^2.2.6",
     "vue": "^2.6.6",
     "vue-electron": "^1.0.6",
     "vue-i18n": "^8.0.0",
@@ -36,6 +38,7 @@
     "electron-updater": "^4.0.6",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "jquery": "^3.4.1",
     "vue-cli-plugin-electron-builder": "^1.2.0",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-cli-plugin-i18n": "^0.5.2",
